# psyche-os

./: Cargo.toml  Makefile  README.md
created/: Cargo.toml
created/assets/etc/created/: config.toml
created/assets/systemd/: created.service
created/assets/udev/: 99-created-serial.rules
created/debian/: postinst  prerm
created/src/: main.rs
scripts/: build-image.sh
